--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         <h1>菊地智子</h1>
-        <p>コーディング学習し始めました。</p>
+        <p>コーディング学習し始めました。ドットインストールは分かりやすくてオススメ！</p>
     </body>
 </html>
